--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Phaneretic Services is a premier geotechnical solutions provider in South Africa, offering an extensive
-        range of services to cater to diverse project needs...">
+        range of services to cater to diverse...">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="keywords"
-        content="Geologists around Eastern Cape &dash; geotechnical solutions umtata &dash; geo-technical services south africa &dash; Phaneretic services &dash;  Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; Rock Aggregate Analysis &dash; Quarry Aggregate Analysis &dash; Geotechnical Investigations &dash; Soil Report Datasets &dash; Tender Monitoring and Evaluation &dash; Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
+        content="Geologists around Eastern Cape &dash; construction Eastern cape &dash; geotechnical services &dash; Phaneretic Services &dash; geotechnical solutions umtata &dash; geo-technical services south africa &dash; Phaneretic services &dash;  Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; Rock Aggregate Analysis &dash; Quarry Aggregate Analysis &dash; Geotechnical Investigations &dash; Soil Report Datasets &dash; Tender Monitoring and Evaluation &dash; Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
 
 
     <!-- twitter -->
     <meta name="twitter:title" content="Phanserv Geotechnical Solutions South Africa" />
     <meta name="twitter:description"
         content="Phaneretic Services is a premier geotechnical solutions provider in South Africa, offering an extensive
-        range of services to cater to diverse project needs..." />
+        range of services to cater to diverse..." />
     <meta name="twitter:image" content="https://phanserve.co.za/Assets/images/img2.jpg" />
 
     <script type="application/ld+json">
@@ -72,7 +72,7 @@
     <meta property="business:contact_data:country_name" content="South Africa">
 
 
-    <title>Phanserv Geotechnical Solutions South Africa</title>
+    <title>Phaneretic Services Geotechnical Solutions South Africa</title>
 </head>
 
 <body>
@@ -226,7 +226,7 @@
 
                             <div class="flex items-center space-x-9">
                                 <button class="">
-                                    <a href="http://" class="btn btn-1 text-lg">Learn
+                                    <a href="/about.html" class="btn btn-1 text-lg">Learn
                                         more</a>
                                 </button>
                                 <div class="flex items-center space-x-2">
@@ -622,9 +622,9 @@
 
                 <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" class="footer-brand">
 
-                    <a href="/index" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
+                    <a href="/index.html" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
 
-                    <p class="footer-text" style="margin-block: 10px 30px;">
+                    <p class="footer-text footer-m">
                         We take pride in our service track record, and we are confident we can exceed your
                         expectations. Phanserv performs feasibility studies, preliminary engineering studies and
                         detailed geotechnical studies and reports
