--- a/about.html
+++ b/about.html
@@ -218,7 +218,7 @@
 
                             <div class="flex items-center space-x-9">
                                 <button class="">
-                                    <a href="http://" class="btn btn-2 text-lg">Contact Us</a>
+                                    <a href="/contact.html" class="btn btn-2 text-lg">Contact Us</a>
                                 </button>
                                 <div class="flex items-center space-x-2">
                                     <div class="w-14 h-14 border-2 border-custom-orange border-solid rounded-full">
@@ -551,9 +551,9 @@
 
                 <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" class="footer-brand">
 
-                    <a href="/index" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
+                    <a href="/index.html" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
 
-                    <p class="footer-text" style="margin-block: 10px 30px;">
+                    <p class="footer-text footer-m">
                         We take pride in our service track record, and we are confident we can exceed your
                         expectations. Phanserv performs feasibility studies, preliminary engineering studies and
                         detailed geotechnical studies and reports
