--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
     <meta property="business:contact_data:postal_code" content="5099">
     <meta property="business:contact_data:country_name" content="South Africa">
 
-    <title>Geotechnical Services We Provide &dash; Phanserv Geotechnical</title>
+    <title>Phaneretic Services (Pty) Ltd &dash; Geotechnical Services we provide</title>
 </head>
 
 <body>
@@ -142,10 +142,10 @@
             <div class="mx-7 md:mx-[7.8rem]">
 
                 <div class="space-y-4">
-                    <h1 class="text-black text-xl md:text-2xl font-bold font-open_sans">Geotechnical Services we provide
+                    <h1 class="text-black text-xl md:text-2xl font-bold font-open_sans">Phaneretic Services (Pty) Ltd &dash; Geotechnical Services we provide
                     </h1>
                     <p class="text-base text-gray-500  font-sans">
-                        Phaneretic Services (Pty) is a leading provider of comprehensive geotechnical
+                        Phaneretic Services (Pty) Ltd is a leading provider of comprehensive geotechnical
                         solutions, offering a wide range of specialized services tailored to meet the diverse needs of
                         its clients. With a team of qualified engineering geologists and professional civil technicians,
                         Phanserv ensures the success and safety of various projects with the following geotechnical
