--- a/about.html
+++ b/about.html
@@ -24,8 +24,7 @@
     geologists...
 
 ">
-    <meta name="keywords"
-        content="geo-technical around Eastern Cape &dash; Geotechnical Investigations 
+    <meta name="keywords" content="geo-technical around Eastern Cape &dash; Geotechnical Investigations 
         &dash; Geologists around Umtata &dash; Borehole and Exploration Drilling 
         &dash; rural township and urban development &dash; Concrete Strength Testing
          &dash; Trial Pit Profiling and Excavations &dash; Water Quality Testing &dash; 
@@ -38,8 +37,7 @@
 
     <!-- twitter -->
     <meta name="twitter:title" content="About Phanserv geotechnical services and solutions south africa" />
-    <meta name="twitter:description"
-        content="Established in 2017 &dash; Phaneretic Services (Phanserv) is a leading 
+    <meta name="twitter:description" content="Established in 2017 &dash; Phaneretic Services (Phanserv) is a leading 
         geotechnical solutions and services provider in South Africa, renowned for its team of qualified engineering 
         geologists..." />
     <meta name="twitter:image" content="https://phanserve.co.za/Assets/images/img2.jpg" />
@@ -72,7 +70,7 @@
     </script>
 
     <meta property="og:type" content="business.business">
-    <meta property="og:title" content="About Phanserv geotechnical services and solutions south africa">
+    <meta property="og:title" content="About Phaneretic Services &dash; geotechnical services and solutions south africa">
     <meta property="og:url" content="https://phanserve.co.za">
     <meta property="og:image" content="https://phanserve.co.za/Assets/images/img2.jpg">
     <meta property="business:contact_data:street_address" content="22 Gerald Spilkin Street">
@@ -81,8 +79,8 @@
     <meta property="business:contact_data:postal_code" content="5099">
     <meta property="business:contact_data:country_name" content="South Africa">
 
-    <meta name="title" content="About Phanserv geotechnical services and solutions south africa">
-    <title>About Phanserv geotechnical services and solutions south africa</title>
+    <meta name="title" content="About Phaneretic Services &dash; geotechnical services and solutions south africa">
+    <title>About Phaneretic Services &dash; geotechnical services and solutions south africa</title>
 
 </head>
 
@@ -164,8 +162,10 @@
                 <div class="overlay w-full h-full top-0 bg-[rgba(25,36,56,0.52)] left-0 absolute "></div>
                 <div class="w-full h-full ">
                     <div class="w-full h-full">
-                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction" class="object-cover w-full h-full">
-                        <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2  mt-6 font-open_sans space-y-5">
+                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction"
+                            class="object-cover w-full h-full">
+                        <div
+                            class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2  mt-6 font-open_sans space-y-5">
 
                             <h3 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">About Us</h3>
                             <p class="text-base md:text-2xl text-white font-sans">
@@ -182,13 +182,14 @@
                 <div class="gap-4 flex items-center space-y-6 flex-col md:flex-row w-full justify-between">
                     <div
                         class="md:w-[30.25rem] h-[24rem] md:h-[27.75rem] bg-heroImage bg-center py-5 bg-cover w-full max-h-content bg-no-repeat relative">
-                        
+
                     </div>
                     <div class="space-y-6 md:w-2/4">
                         <div class="space-y-3">
-                            <span class="font-semibold text-lg md:text-xl uppercase text-custom-orange">WHO WE ARE?</span>
+                            <span class="font-semibold text-lg md:text-xl uppercase text-custom-orange">WHO WE
+                                ARE?</span>
                             <h1 class="text-3xl md:text-4xk font-bold text-black font-open_sans">
-                                Safe, Reliable And Affordable Geotechnology Services That Exceeds Your Expectations
+                                About Phaneretic Services &dash; geotechnical services and solutions south africa
                             </h1>
                         </div>
                         <div class="text">
@@ -307,19 +308,23 @@
                             </p>
 
                             <div class="grid items-center md:grid-cols-2 gap-3">
-                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300" class="flex items-center space-x-4">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300"
+                                    class="flex items-center space-x-4">
                                     <i class="bx text-custom-orange text-lg bxs-right-arrow-circle"></i>
                                     <p class="text-gray-500">Expert Team</p>
                                 </div>
-                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600" class="flex items-center space-x-4">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600"
+                                    class="flex items-center space-x-4">
                                     <i class="bx text-custom-orange text-lg bxs-right-arrow-circle"></i>
                                     <p class="text-gray-500">Timely Delivery</p>
                                 </div>
-                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900" class="flex items-center space-x-4">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900"
+                                    class="flex items-center space-x-4">
                                     <i class="bx text-custom-orange text-lg bxs-right-arrow-circle"></i>
                                     <p class="text-gray-500">Best Equipment</p>
                                 </div>
-                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1200" class="flex items-center space-x-4">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1200"
+                                    class="flex items-center space-x-4">
                                     <i class="bx text-custom-orange text-lg bxs-right-arrow-circle"></i>
                                     <p class="text-gray-500">100% guaranty quality services</p>
                                 </div>
@@ -329,21 +334,25 @@
                     </div>
                     <div class="space-y-6 hidden md:block">
                         <div class="flex w-full items-center space-x-10">
-                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300" class="space-y-1 w-24">
+                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300"
+                                class="space-y-1 w-24">
                                 <h4 class="text-3xl text-custom-orange font-semibold font-open_sans">67</h4>
                                 <p class="text-sm text-custom-blue font-normal font-sans">Completed Projects</p>
                             </div>
-                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600" class="space-y-1 w-24">
+                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600"
+                                class="space-y-1 w-24">
                                 <h4 class="text-3xl text-custom-orange font-semibold font-open_sans">5</h4>
                                 <p class="text-sm text-custom-blue font-normal font-sans">Qualified Employees</p>
                             </div>
-                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="900" class="space-y-1 w-24">
+                            <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="900"
+                                class="space-y-1 w-24">
                                 <h4 class="text-3xl text-custom-orange font-semibold font-open_sans">7</h4>
                                 <p class="text-sm text-custom-blue font-normal font-sans">Years of experience</p>
                             </div>
                         </div>
                         <div class="content_img_container">
-                            <img src="/Assets/images/img6.jpg" alt="phanserv construction service in" class="md:w-[31.25rem] md:h-[28.75rem]" />
+                            <img src="/Assets/images/img6.jpg" alt="phanserv construction service in"
+                                class="md:w-[31.25rem] md:h-[28.75rem]" />
                         </div>
                     </div>
                 </div>
@@ -353,23 +362,28 @@
             <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000"
                 class="w-full relative h-full  overflow-hidden">
                 <div class="overlay w-full h-full top-0 bg-[rgba(19,29,47,0.77)] left-0 absolute "></div>
-                <img src="/Assets/images/img3.jpg" alt="phanserv construction team working" class="w-full h-full object-cover" />
+                <img src="/Assets/images/img3.jpg" alt="phanserv construction team working"
+                    class="w-full h-full object-cover" />
                 <div class="absolute top-2/4 left-2/4 translate-x-[-50%] translate-y-[-50%]">
                     <div
                         class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 items-center justify-between gap-7 sm:gap-20 w-full">
-                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="" class="space-y-2 text-center">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay=""
+                            class="space-y-2 text-center">
                             <h4 class="text-5xl text-white font-bold font-open_sans">7</h4>
                             <p class="text-lg md:text-xl text-white font-normal font-sans">Years Of Expirience</p>
                         </div>
-                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="space-y-2 text-center">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"
+                            class="space-y-2 text-center">
                             <h4 class="text-5xl text-white font-bold font-open_sans">67</h4>
                             <p class="text-lg md:text-xl text-white font-normal font-sans">Completed Projects</p>
                         </div>
-                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="space-y-2 text-center">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"
+                            class="space-y-2 text-center">
                             <h4 class="text-5xl text-white font-bold font-open_sans">25</h4>
                             <p class="text-lg md:text-xl text-white font-normal font-sans">Satisfied Clients</p>
                         </div>
-                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" class="space-y-2 text-center">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"
+                            class="space-y-2 text-center">
                             <h4 class="text-5xl text-white font-bold font-open_sans">5</h4>
                             <p class="text-lg md:text-xl text-white font-normal font-sans">Qualified Employees</p>
                         </div>
@@ -453,7 +467,7 @@
                     <h4 class="font-sans text-lg md:text-xl text-custom-orange">Our Popular Services</h4>
                     <h5 class="font-bold text-xl md:text-2xl font-open_sans text-black">Better Geotechnical Services at
                         an
-                        affordable cost</h1>
+                        affordable cost</h5>
                 </div>
 
                 <div class="text-center">
@@ -461,14 +475,19 @@
                         Phanserv is a premier geotechnical solutions provider in South Africa, offering an extensive
                         range of services to cater to diverse project needs. With a team of qualified engineering
                         geologists and professional civil technicians, Phanserv delivers exceptional expertise and
-                        knowledge to ensure clients&apos; projects surpass industry standards. Our comprehensive geotechnical
+                        knowledge to ensure clients&apos; projects surpass industry standards. Our comprehensive
+                        geotechnical
                         services encompass:
                     </p>
                     <p class="text-base text-gray-500 font-medium">
-                        Geotechnical Investigations &dash; Borehole and Exploration Drilling &dash; including rural, township, and
-                        urban development &dash; Concrete Strength Testing &dash; Trial Pit Profiling and Excavations &dash; Water
-                        Quality Testing &dash; Borehole and Exploration Drilling &dash; Environmental Impact Assessments and
-                        Audits &dash; Rural, Township, and Urban Development &dash; Foundation Analysis &dash; DCP, DPL, and DPSH
+                        Geotechnical Investigations &dash; Borehole and Exploration Drilling &dash; including rural,
+                        township, and
+                        urban development &dash; Concrete Strength Testing &dash; Trial Pit Profiling and Excavations
+                        &dash; Water
+                        Quality Testing &dash; Borehole and Exploration Drilling &dash; Environmental Impact Assessments
+                        and
+                        Audits &dash; Rural, Township, and Urban Development &dash; Foundation Analysis &dash; DCP, DPL,
+                        and DPSH
                         Testing &dash; Borehole Core Profiling or Percussion Chip Logging
                     </p>
                 </div>
@@ -509,10 +528,12 @@
                                 Email Us:
                             </h4>
                             <div>
-                                <a href="" id="contact-email-" class="block text-sm  md:text-base font-normal text-white">
+                                <a href="" id="contact-email-"
+                                    class="block text-sm  md:text-base font-normal text-white">
                                     info@phanserv.co.za
                                 </a>
-                                <a href="" id="contact-email-2" class="block text-sm md:text-base  font-normal text-white">
+                                <a href="" id="contact-email-2"
+                                    class="block text-sm md:text-base  font-normal text-white">
                                     accounts@phanserv.co.za
                                 </a>
                             </div>
