--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         content="To get in touch with Phanserv and discuss your geotechnical project needs, you
         have various options available. You can reach out...">
     <meta name="keywords"
-        content="Contact phanserv &dash; contact Phaneretic services (pty) ltd &dash; geo-technical services umtata &dash; Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; ; Rock Aggregate Analysis &dash; Quarry Aggregate Analysis &dash; Geotechnical Investigations &dash; Soil Report Datasets &dash; Tender Monitoring and Evaluation &dash; Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
+        content="Contact phanserv &dash; contact Phaneretic services (pty) ltd &dash; construction Eastern cape &dash; Phaneretic Services &dash; geo-technical services umtata &dash; Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; ; Rock Aggregate Analysis &dash; Quarry Aggregate Analysis &dash; Geotechnical Investigations &dash; Soil Report Datasets &dash; Tender Monitoring and Evaluation &dash; Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/Assets/css/aos.css">
@@ -63,7 +63,7 @@
     </script>
 
     <meta property="og:type" content="business.business">
-    <meta property="og:title" content="Contact Phanserv Geotechnical Solutions South Africa">
+    <meta property="og:title" content="contact Phaneretic services (pty) ltd for your next Geotech project">
     <meta property="og:url" content="https://phanserve.co.za">
     <meta property="og:image" content="https://phanserve.co.za/Assets/images/img2.jpg">
     <meta property="business:contact_data:street_address" content="22 Gerald Spilkin Street">
@@ -72,7 +72,7 @@
     <meta property="business:contact_data:postal_code" content="5099">
     <meta property="business:contact_data:country_name" content="South Africa">
 
-    <title>Contact phanserv for your next Geotech project</title>
+    <title>Contact Phaneretic services (pty) ltd for your next Geotech project</title>
 </head>
 
 <body>
@@ -158,7 +158,7 @@
                         <div
                             class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2  mt-6 font-open_sans space-y-5">
 
-                            <h1 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">Contact us</h1>
+                            <h2 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">Contact us</h2>
                             <p class="text-base md:text-2xl text-white font-sans">
 
                             </p>
@@ -176,8 +176,7 @@
                             <span class="font-bold text-sm uppercase md:text-md text-custom-orange font-open_sans">
                                 How To contact us?
                             </span>
-                            <h2 class="text-3xl font-open_sans font-bold md:text-4xl">High Quality Soil Classification &
-                                Innovative Geotechnical Projects</h2>
+                            <h1 class="text-3xl font-open_sans font-bold md:text-4xl">contact Phaneretic services (pty) ltd for your next Geotech project</h1>
                             <div class="space-y-4">
                                 <div class="space-y-3">
                                     <p class="text-sm md:text-base font-sans">
