--- a/about.html
+++ b/about.html
@@ -32,7 +32,6 @@
          Rural,Township,and Urban Development &dash; Foundation Analysis DCP, DPL, and DPSH Testing
          &dash; Borehole Core Profiling &dash; Percussion Chip Logging">
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/Assets/css/aos.css">
 
     <!-- twitter -->
@@ -689,8 +688,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wedoit.</a> | <a href="/privacy/terms.html">Terms & Conditions</a> | <a
-                        href="/privacy/privacy.html">Privacy Policy</a>
+                    by <a href="#" rel="nofollow" class="">wedoit.</a> | <a rel="nofollow" href="/privacy/terms.html" nofollow>Terms & Conditions</a> | <a
+                        href="/privacy/privacy.html" rel="nofollow">Privacy Policy</a>
                 </p>
             </div>
 
@@ -698,7 +697,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    
     <script src="/Assets/js/aos.js"></script>
     <script>
         AOS.init({
