--- a/index.html
+++ b/index.html
@@ -739,8 +739,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wedoit.</a> | <a href="/privacy/terms.html">Terms & Conditions</a> | <a
-                        href="/privacy/privacy.html">Privacy Policy</a>
+                    by <a href="#" rel="nofollow" class="">wedoit.</a> | <a rel="nofollow" href="/privacy/terms.html" nofollow>Terms & Conditions</a> | <a
+                        href="/privacy/privacy.html" rel="nofollow">Privacy Policy</a>
                 </p>
             </div>
 
@@ -748,7 +748,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./Assets/js/aos.js"></script>
     <script>
         AOS.init({
