--- a/services.html
+++ b/services.html
@@ -619,8 +619,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wedoit.</a> | <a href="/privacy/terms.html">Terms & Conditions</a> | <a
-                        href="/privacy/privacy.html">Privacy Policy</a>
+                    by <a href="#" rel="nofollow" class="">wedoit.</a> | <a rel="nofollow" href="/privacy/terms.html" nofollow>Terms & Conditions</a> | <a
+                        href="/privacy/privacy.html" rel="nofollow">Privacy Policy</a>
                 </p>
             </div>
 
